# etienne

./: .gitignore  CLAUDE.md  CODEX_SUPPORT.md  EVENT-SYSTEM-README.md  KNOWLEDGE_GRAPH_ARCHITECTURE.md  LICENSE  OPENCODE_SUPPORT.md  README.md  SSE-between-frontend-and-backend.md  adaptive-memory.md  agent.yaml  api-keys-secrets.md  api.md  claude-code-stream-handler.tsx  claude-hooks-and-events.md  context-management.md  create-requirements-hv.json  event-bus-architecture.md  event-bus.js  event-handling.example.json  experimental-features.md  hitl-protocol.md  html-to-filesystem-bridge.html  kimi_3_sdk.md  knowledge-base.md  mcp-registry.md  mcp-ui.md  messenger-integration.md  migration-list.md  ms-teams-integration.md  one-dive.md  one-drive.md  package.json  post-install-assistance.md  prd-RAG-search-skill.md  prd-browser-use.md  prd-chat-persistence.md  prd-checkpoints.md  prd-configuration.md  prd-i18n.md  (+18 more)
.claude/: settings.local.json
.playwright-mcp/: page-2026-05-27T18-29-42-004Z.yml  page-2026-05-27T18-30-04-324Z.yml  page-2026-05-27T18-30-22-860Z.yml
a2a-server/: .env.example  .gitignore  package.json
a2ui-app-restaurant-booking/: README.md  package.json  tsconfig.json
adrs/: 001-project-isolation-and-multi-tenancy.md  002-inner-harness-design.md  003-sse-communication-protocol.md  004-service-connectivity.md  005-security-architecture.md  006-event-driven-architecture.md  007-agentic-behaviour.md  009-messenger-integration.md  (+5 more)
vector-store/: README.md  examples.py  multi-tenant-chromadb.py  openapi.json  pyproject.toml  requirements.txt  server.js
(+2020 files in other folders)
